k8s/app-votacao-service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-app-votacao
spec:
  type: ClusterIP
  selector:
    app: app-votacao
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
